force-app/main/default/objects/Sales_Market_Areas__c/Sales_Market_Areas__c.object-meta.xml
<CustomObject>
    <description>Regional Sales market Areas</description>
    <label>Sales Market Area</label>
    <nameField>
        <label>Business Dev Area</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Market Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>