force-app/main/default/objects/Sales_Market_Areas__c/fields/Area_VP__c.field-meta.xml
<CustomField>
    <fullName>Area_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Area VP</description>
    <label>Area VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Areas1</relationshipName>
    <type>Lookup</type>
</CustomField>