force-app/main/default/objects/Sales_Market_Areas__c/fields/Area_VP_email__c.field-meta.xml
<CustomField>
    <fullName>Area_VP_email__c</fullName>
    <formula>Area_VP__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area VP email</label>
    <type>Text</type>
</CustomField>