force-app/main/default/objects/Sales_Market_Areas__c/fields/Area_VP_Title__c.field-meta.xml
<CustomField>
    <fullName>Area_VP_Title__c</fullName>
    <formula>Area_VP__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area VP Title</label>
    <type>Text</type>
</CustomField>