force-app/main/default/objects/Sales_Market_Areas__c/fields/Business_Dev_Area_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Dev_Area_Name__c</fullName>
    <description>Description of Sales Area</description>
    <label>Business Dev Area Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>