force-app/main/default/objects/Sales_Market_Areas__c/fields/Business_Dev_Region_name__c.field-meta.xml
<CustomField>
    <fullName>Business_Dev_Region_name__c</fullName>
    <description>Business Development Sales Regions</description>
    <label>Business Dev Region Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US East</fullName>
            </value>
            <value>
                <fullName>US Gulf</fullName>
            </value>
            <value>
                <fullName>US Midwest</fullName>
            </value>
            <value>
                <fullName>US West</fullName>
            </value>
            <value>
                <fullName>Canada East</fullName>
            </value>
            <value>
                <fullName>Canada West</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>