force-app/main/default/objects/Sales_Market_Areas__c/fields/Regional_SVP__c.field-meta.xml
<CustomField>
    <fullName>Regional_SVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Regional SVP</description>
    <label>Regional SVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>