force-app/main/default/objects/Sales_Market_Areas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Dev_Area_Name__c</columns>
    <columns>Area_VP__c</columns>
    <columns>Area_VP_Title__c</columns>
    <columns>Regional_SVP__c</columns>
    <columns>Business_Dev_Region_name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>